fixed invisible artcle content on IE11

--- a/css/second-level/magazine-article.css
+++ b/css/second-level/magazine-article.css
@@ -238,7 +238,7 @@ button.trigger span::before {
     background: transparent;
     overflow: hidden;
     position: relative;
-    z-index: 1;
+    z-index: 100;
 }
 
 .lt-ie9 .content {
